@@ -22,6 +22,10 @@ Require Import Gt.
 Require Import Plus.
 Require Import Mult.
 Require Import Minus.
+Require Import Compare_dec.
+
+Local Open Scope positive_scope.
+Local Open Scope nat_scope.
 
 (** [nat_of_P] is a morphism for addition *)
 
@@ -161,7 +165,7 @@ Qed.
 *)
 
 Lemma nat_of_P_lt_Lt_compare_morphism :
- forall p q:positive, (p ?= q)%positive Eq = Lt -> nat_of_P p < nat_of_P q.
+ forall p q:positive, (p ?= q) Eq = Lt -> nat_of_P p < nat_of_P q.
 Proof.
 intro x; induction x as [p H| p H| ]; intro y; destruct y as [q| q| ];
  intro H2;
@@ -193,29 +197,35 @@ Qed.
 *)
 
 Lemma nat_of_P_gt_Gt_compare_morphism :
- forall p q:positive, (p ?= q)%positive Eq = Gt -> nat_of_P p > nat_of_P q.
+ forall p q:positive, (p ?= q) Eq = Gt -> nat_of_P p > nat_of_P q.
 Proof.
-unfold gt in |- *; intro x; induction x as [p H| p H| ]; intro y;
- destruct y as [q| q| ]; intro H2;
- [ simpl in |- *; unfold nat_of_P in |- *; simpl in |- *; do 2 rewrite ZL6;
-    apply lt_n_S; apply ZL7; apply H; assumption
- | simpl in |- *; unfold nat_of_P in |- *; simpl in |- *; do 2 rewrite ZL6;
-    elim (Pcompare_Gt_Gt p q H2);
-    [ intros H3; apply lt_S; apply ZL7; apply H; assumption
-    | intros E; rewrite E; apply lt_n_Sn ]
- | unfold nat_of_P in |- *; simpl in |- *; rewrite ZL6; elim (ZL4 p);
-    intros h H3; rewrite H3; simpl in |- *; apply lt_n_S; 
-    apply lt_O_Sn
- | simpl in |- *; unfold nat_of_P in |- *; simpl in |- *; do 2 rewrite ZL6;
-    apply ZL8; apply H; apply Pcompare_Lt_Gt; assumption
- | simpl in |- *; unfold nat_of_P in |- *; simpl in |- *; do 2 rewrite ZL6;
-    apply ZL7; apply H; assumption
- | unfold nat_of_P in |- *; simpl in |- *; rewrite ZL6; elim (ZL4 p);
-    intros h H3; rewrite H3; simpl in |- *; rewrite <- plus_n_Sm;
-    apply lt_n_S; apply lt_O_Sn
- | simpl in |- *; discriminate H2
- | simpl in |- *; discriminate H2
- | simpl in |- *; discriminate H2 ].
+intros p q GT. unfold gt.
+apply nat_of_P_lt_Lt_compare_morphism.
+change ((q ?= p) (CompOpp Eq) = CompOpp Gt).
+rewrite <- Pcompare_antisym, GT; auto.
+Qed.
+
+(** [nat_of_P] is a morphism for [Pcompare] and [nat_compare] *)
+
+Lemma nat_of_P_compare_morphism : forall p q,
+ (p ?= q) Eq = nat_compare (nat_of_P p) (nat_of_P q).
+Proof.
+ intros p q; symmetry.
+ destruct ((p ?= q) Eq) as [ | | ]_eqn.
+ rewrite (Pcompare_Eq_eq p q); auto.
+ apply <- nat_compare_eq_iff; auto.
+ apply -> nat_compare_lt. apply nat_of_P_lt_Lt_compare_morphism; auto.
+ apply -> nat_compare_gt. apply nat_of_P_gt_Gt_compare_morphism; auto.
+Qed.
+
+(** [nat_of_P] is hence injective. *)
+
+Lemma nat_of_P_inj : forall p q:positive, nat_of_P p = nat_of_P q -> p = q.
+Proof.
+intros.
+apply Pcompare_Eq_eq.
+rewrite nat_of_P_compare_morphism.
+apply <- nat_compare_eq_iff; auto.
 Qed.
 
 (** [nat_of_P] is a morphism from [positive] to [nat] for [lt] (expressed
@@ -225,17 +235,10 @@ Qed.
 *)
 
 Lemma nat_of_P_lt_Lt_compare_complement_morphism :
- forall p q:positive, nat_of_P p < nat_of_P q -> (p ?= q)%positive Eq = Lt.
+ forall p q:positive, nat_of_P p < nat_of_P q -> (p ?= q) Eq = Lt.
 Proof.
-intros x y; unfold gt in |- *; elim (Dcompare ((x ?= y)%positive Eq));
- [ intros E; rewrite (Pcompare_Eq_eq x y E); intros H;
-    absurd (nat_of_P y < nat_of_P y); [ apply lt_irrefl | assumption ]
- | intros H; elim H;
-    [ auto
-    | intros H1 H2; absurd (nat_of_P x < nat_of_P y);
-       [ apply lt_asym; change (nat_of_P x > nat_of_P y) in |- *;
-          apply nat_of_P_gt_Gt_compare_morphism; assumption
-       | assumption ] ] ].
+ intros. rewrite nat_of_P_compare_morphism.
+ apply -> nat_compare_lt; auto.
 Qed.
 
 (** [nat_of_P] is a morphism from [positive] to [nat] for [gt] (expressed
@@ -245,17 +248,12 @@ Qed.
 *)
 
 Lemma nat_of_P_gt_Gt_compare_complement_morphism :
- forall p q:positive, nat_of_P p > nat_of_P q -> (p ?= q)%positive Eq = Gt.
+ forall p q:positive, nat_of_P p > nat_of_P q -> (p ?= q) Eq = Gt.
 Proof.
-intros x y; unfold gt in |- *; elim (Dcompare ((x ?= y)%positive Eq));
- [ intros E; rewrite (Pcompare_Eq_eq x y E); intros H;
-    absurd (nat_of_P y < nat_of_P y); [ apply lt_irrefl | assumption ]
- | intros H; elim H;
-    [ intros H1 H2; absurd (nat_of_P y < nat_of_P x);
-       [ apply lt_asym; apply nat_of_P_lt_Lt_compare_morphism; assumption
-       | assumption ]
-    | auto ] ].
+ intros. rewrite nat_of_P_compare_morphism.
+ apply -> nat_compare_gt; auto.
 Qed.
+
 
 (** [nat_of_P] is strictly positive *)
 
@@ -301,21 +299,18 @@ Qed.
 
 Lemma nat_of_P_xO : forall p:positive, nat_of_P (xO p) = 2 * nat_of_P p.
 Proof.
-  simple induction p. unfold nat_of_P in |- *. simpl in |- *. intros. rewrite Pmult_nat_2_mult_2_permute.
-  rewrite Pmult_nat_4_mult_2_permute. rewrite H. simpl in |- *. rewrite <- plus_Snm_nSm. reflexivity.
-  unfold nat_of_P in |- *. simpl in |- *. intros. rewrite Pmult_nat_2_mult_2_permute. rewrite Pmult_nat_4_mult_2_permute.
-  rewrite H. reflexivity.
-  reflexivity.
+  intros.
+  change 2 with (nat_of_P 2).
+  rewrite <- nat_of_P_mult_morphism.
+  f_equal.
 Qed.
 
 Lemma nat_of_P_xI : forall p:positive, nat_of_P (xI p) = S (2 * nat_of_P p).
 Proof.
-  simple induction p. unfold nat_of_P in |- *. simpl in |- *. intro p0. intro. rewrite Pmult_nat_2_mult_2_permute.
-  rewrite Pmult_nat_4_mult_2_permute; injection H; intro H1; rewrite H1;
-   rewrite <- plus_Snm_nSm; reflexivity.
-  unfold nat_of_P in |- *. simpl in |- *. intros. rewrite Pmult_nat_2_mult_2_permute. rewrite Pmult_nat_4_mult_2_permute.
-  injection H; intro H1; rewrite H1; reflexivity.
-  reflexivity.
+  intros.
+  change 2 with (nat_of_P 2).
+  rewrite <- nat_of_P_mult_morphism, <- nat_of_P_succ_morphism.
+  f_equal.
 Qed.
 
 (**********************************************************************)
@@ -327,9 +322,9 @@ Qed.
 Theorem nat_of_P_o_P_of_succ_nat_eq_succ :
  forall n:nat, nat_of_P (P_of_succ_nat n) = S n.
 Proof.
-intro m; induction m as [| n H];
- [ reflexivity
- | simpl in |- *; rewrite nat_of_P_succ_morphism; rewrite H; auto ].
+induction n as [|n H].
+reflexivity.
+simpl; rewrite nat_of_P_succ_morphism, H; auto.
 Qed.
 
 (** Miscellaneous lemmas on [P_of_succ_nat] *)
@@ -337,17 +332,17 @@ Qed.
 Lemma ZL3 :
  forall n:nat, Psucc (P_of_succ_nat (n + n)) = xO (P_of_succ_nat n).
 Proof.
-intro x; induction x as [| n H];
- [ simpl in |- *; auto with arith
- | simpl in |- *; rewrite plus_comm; simpl in |- *; rewrite H;
+induction n as [| n H]; simpl;
+ [ auto with arith
+ | rewrite plus_comm; simpl; rewrite H;
     rewrite xO_succ_permute; auto with arith ].
 Qed.
 
 Lemma ZL5 : forall n:nat, P_of_succ_nat (S n + S n) = xI (P_of_succ_nat n).
 Proof.
-intro x; induction x as [| n H]; simpl in |- *;
+induction n as [| n H]; simpl;
  [ auto with arith
- | rewrite <- plus_n_Sm; simpl in |- *; simpl in H; rewrite H;
+ | rewrite <- plus_n_Sm; simpl; simpl in H; rewrite H;
     auto with arith ].
 Qed.
 
@@ -356,19 +351,9 @@ Qed.
 Theorem P_of_succ_nat_o_nat_of_P_eq_succ :
  forall p:positive, P_of_succ_nat (nat_of_P p) = Psucc p.
 Proof.
-intro x; induction x as [p H| p H| ];
- [ simpl in |- *; rewrite <- H; change 2 with (1 + 1) in |- *;
-    rewrite Pmult_nat_r_plus_morphism; elim (ZL4 p); 
-    unfold nat_of_P in |- *; intros n H1; rewrite H1; 
-    rewrite ZL3; auto with arith
- | unfold nat_of_P in |- *; simpl in |- *; change 2 with (1 + 1) in |- *;
-    rewrite Pmult_nat_r_plus_morphism;
-    rewrite <- (Ppred_succ (P_of_succ_nat (Pmult_nat p 1 + Pmult_nat p 1)));
-    rewrite <- (Ppred_succ (xI p)); simpl in |- *; 
-    rewrite <- H; elim (ZL4 p); unfold nat_of_P in |- *; 
-    intros n H1; rewrite H1; rewrite ZL5; simpl in |- *; 
-    trivial with arith
- | unfold nat_of_P in |- *; simpl in |- *; auto with arith ].
+intros.
+apply nat_of_P_inj.
+rewrite nat_of_P_o_P_of_succ_nat_eq_succ, nat_of_P_succ_morphism; auto.
 Qed.
 
 (** Composition of [nat_of_P], [P_of_succ_nat] and [Ppred] is identity
@@ -377,8 +362,7 @@ Qed.
 Theorem pred_o_P_of_succ_nat_o_nat_of_P_eq_id :
  forall p:positive, Ppred (P_of_succ_nat (nat_of_P p)) = p.
 Proof.
-intros x; rewrite P_of_succ_nat_o_nat_of_P_eq_succ; rewrite Ppred_succ;
- trivial with arith.
+intros; rewrite P_of_succ_nat_o_nat_of_P_eq_succ, Ppred_succ; auto.
 Qed.
 
 (**********************************************************************)
@@ -389,21 +373,13 @@ Qed.
 
 Theorem nat_of_P_minus_morphism :
  forall p q:positive,
-   (p ?= q)%positive Eq = Gt -> nat_of_P (p - q) = nat_of_P p - nat_of_P q.
+   (p ?= q) Eq = Gt -> nat_of_P (p - q) = nat_of_P p - nat_of_P q.
 Proof.
 intros x y H; apply plus_reg_l with (nat_of_P y); rewrite le_plus_minus_r;
  [ rewrite <- nat_of_P_plus_morphism; rewrite Pplus_minus; auto with arith
  | apply lt_le_weak; exact (nat_of_P_gt_Gt_compare_morphism x y H) ].
 Qed.
 
-(** [nat_of_P] is injective *)
-
-Lemma nat_of_P_inj : forall p q:positive, nat_of_P p = nat_of_P q -> p = q.
-Proof.
-intros x y H; rewrite <- (pred_o_P_of_succ_nat_o_nat_of_P_eq_id x);
- rewrite <- (pred_o_P_of_succ_nat_o_nat_of_P_eq_id y); 
- rewrite H; trivial with arith.
-Qed.
 
 Lemma ZL16 : forall p q:positive, nat_of_P p - nat_of_P q < nat_of_P p.
 Proof.
@@ -423,9 +399,9 @@ Qed.
 
 Lemma Pcompare_minus_r :
  forall p q r:positive,
-   (q ?= p)%positive Eq = Lt ->
-   (r ?= p)%positive Eq = Gt ->
-   (r ?= q)%positive Eq = Gt -> (r - p ?= r - q)%positive Eq = Lt.
+   (q ?= p) Eq = Lt ->
+   (r ?= p) Eq = Gt ->
+   (r ?= q) Eq = Gt -> (r - p ?= r - q) Eq = Lt.
 Proof.
 intros; apply nat_of_P_lt_Lt_compare_complement_morphism;
  rewrite nat_of_P_minus_morphism;
@@ -446,9 +422,9 @@ Qed.
 
 Lemma Pcompare_minus_l :
  forall p q r:positive,
-   (q ?= p)%positive Eq = Lt ->
-   (p ?= r)%positive Eq = Gt ->
-   (q ?= r)%positive Eq = Gt -> (q - r ?= p - r)%positive Eq = Lt.
+   (q ?= p) Eq = Lt ->
+   (p ?= r) Eq = Gt ->
+   (q ?= r) Eq = Gt -> (q - r ?= p - r) Eq = Lt.
 Proof.
 intros p q z; intros; apply nat_of_P_lt_Lt_compare_complement_morphism;
  rewrite nat_of_P_minus_morphism;
@@ -469,8 +445,8 @@ Qed.
 
 Theorem Pmult_minus_distr_l :
  forall p q r:positive,
-   (q ?= r)%positive Eq = Gt ->
-   (p * (q - r))%positive = (p * q - p * r)%positive.
+   (q ?= r) Eq = Gt ->
+   (p * (q - r) = p * q - p * r)%positive.
 Proof.
 intros x y z H; apply nat_of_P_inj; rewrite nat_of_P_mult_morphism;
  rewrite nat_of_P_minus_morphism;
