@@ -43,6 +43,9 @@ Library
 
 - Use "Coq standard" names for the properties of eq and identity
   (e.g. refl_equal is now eq_refl). Support for compatibility is provided.
+- The function Compare_dec.nat_compare is now defined directly,
+  instead of relying on lt_eq_lt_dec. The earlier version is still
+  available under the name nat_compare_alt.
 
 Changes from V8.1 to V8.2
 =========================
